# chain-rest

./: Cargo.toml  README.md
near-jsonrpc/: Cargo.toml
near-jsonrpc/src/: json_rpc.rs  main.rs
