[package]
name = "near-jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-chain-configs = "0.16.1"
near-crypto = "0.16.1"
near-jsonrpc-client = "0.5.1"
near-jsonrpc-primitives = "0.16.1"
near-primitives = "0.16.1"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.17", features = ["json"], default-features = false }
env_logger = "0.10.0"
